<resources>
    <string name="app_name" translatable="false">EGNSS4CAP</string>
    <string name="gn_failure">Failure</string>
    <string name="gn_taskRefreshStart">Starting synchronization with server.</string>
    <string name="gn_taskRefreshSuccess">All tasks successfully synchronized with server.</string>
    <string name="gn_taskRefreshError">Error during task synchronization.\n\n%1$s</string>
    <string name="gn_taskUploadStatusFailed">Failed to upload task status.\n\n%1$s</string>
    <string name="gn_failedPhotoDownload">Failed to download photo.\n\n%1$s</string>
    <string name="gn_success">Success</string>
    <string name="gn_yes">Yes</string>
    <string name="gn_no">No</string>
    <string name="gn_unavailable">Unavailable</string>
    <string name="menu_sync">Synchronize</string>
    <string name="menu_home">Home</string>
    <string name="menu_taskOverview">Task Overview</string>
    <string name="menu_map">Map</string>
    <string name="menu_pathTracking">Path Tracking</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_gnssRawData">GNSS Raw Data</string>
    <string name="menu_about">About</string>
    <string name="menu_unownedPhoto">Unassigned Photos</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_login">Sign in EGNSS4CAP</string>
    <string name="title_home">@string/app_name</string>
    <string name="title_map">Map</string>
    <string name="title_pathTrackingOverview">Path Tracking Overview</string>
    <string name="title_settings">Settings</string>
    <string name="title_setFilterCentroid">Centroid Location Filter Settings</string>
    <string name="title_taskView">Task Overview</string>
    <string name="title_taskFulfill">Task Completion</string>
    <string name="title_taskPhotoGallery">Task Photo Gallery</string>
    <string name="title_taskDetail">Task Detail</string>
    <string name="title_gnnsRawData">GNSS Raw Data</string>
    <string name="title_about">About</string>
    <string name="title_permissions">Granting Permissions</string>
    <string name="title_unownedPhotos">Unassigned Photos</string>
    <string name="title_photoDetail">Photo Detail</string>
    <string name="bs_permissionDeniedTitle">Permission denied</string>
    <string name="bs_permissionDeniedContent">You denied %1$s permission.
        You will be restricted from using the full functionality of the application until you grant this permission.</string>
    <string name="bs_syncTitle">Synchronization</string>
    <string name="bs_syncStateProgress">Synchronization in progress.
        \nUse of the application is locked during synchronization.</string>
    <string name="bs_syncStateCompleteSuccess">Synchronization complete.</string>
    <string name="bs_syncStateCompleteError">Errors occurred during synchronization.</string>
    <string name="bs_syncWait">Please wait.</string>
    <string name="ms_notificationContent">Application is running</string>
    <string name="ms_deviceConditionTitle">Device condition</string>
    <string name="ms_deviceConditionDetail">Device is not able to run application. Please check permission to use location services and if location services are enabled</string>
    <string name="st_loading">Loading</string>
    <string name="hs_title">Home screen</string>
    <string name="hs_loggedUser">User information</string>
    <string name="hs_login">Login</string>
    <string name="hs_name">Name</string>
    <string name="hs_surname">Surname</string>
    <string name="hs_numberOpenTasks">Number of Open Tasks</string>
    <string name="hs_numberPhotos">Number of Photos</string>
    <string name="hs_noLocationServiceTitle">No Location Service</string>
    <string name="hs_noLocationServiceText">Check that you have activated location service with sufficient privileges.</string>
    <string name="pr_insufficientPermissions">Insufficient permissions</string>
    <string name="pr_description">You will be restricted to use full functionality of the application until you grant all requested application permissions.</string>
    <string name="pr_grandPermissions">Grant permissions</string>
    <string name="tf_task">Task</string>
    <string name="tf_id">Id</string>
    <string name="tf_name">Name</string>
    <string name="tf_status">Status</string>
    <string name="tf_instructions">Instructions</string>
    <string name="tf_reasonForReturn">Reason for Return</string>
    <string name="tf_dateCreated">Date created</string>
    <string name="tf_taskDueDay">Task due date</string>
    <string name="tf_note">Note</string>
    <string name="tf_photos">Photos</string>
    <string name="tf_lat">Latitude</string>
    <string name="tf_lng">Longitude</string>
    <string name="tf_photoCreated">Created</string>
    <string name="tf_nextPhoto">Next</string>
    <string name="tf_previousPhoto">Previous</string>
    <string name="tf_send">Send</string>
    <string name="tf_mapButton">Map</string>
    <string name="tf_lockedTaskTitle">The task is locked</string>
    <string name="tf_lockedTaskText">The task will be locked until it is sent without an error or synchronized with a steady state on the server.</string>
    <string name="tf_sendFailedTitle">Upload not successful</string>
    <string name="tf_createImgFileFailure">Failed to create an image file.\n\n%1$s</string>
    <string name="tf_savePhotoFileFailure">Failed to save image to a file.\n\n%1$s</string>
    <string name="tf_unsatisfactoryLocation">Incomplete location data.</string>
    <string name="tf_unsatisfactoryLocationText">Incomplete location data acquired when the photo was taken.</string>
    <string name="tf_wait">Wait</string>
    <string name="tf_processingPosition">Don\'t move. Processing position ...</string>
    <string name="tf_unsatisfactoryDatetime">Time stamp of photo not permitted.</string>
    <string name="tf_unsatisfactoryDatetimeText">The photo must not be older than %1$s from the position calculation.</string>
    <string name="tf_failedLoadPhoto">Failed to load photo</string>
    <string name="tf_failedLoadPhotoText">An error occurred during loading of the photo from local storage.\n\n%1$s</string>
    <string name="tf_sendDialogTitle">Confirm submission</string>
    <string name="tf_sendDialogText">Do you really want to submit this task, including all its photos?\nOnce sent, it will not be further editable.</string>
    <string name="tf_sendDialogNoPhotosTitle">No photos available</string>
    <string name="tf_sendDialogNoPhotosText">Cannot send task without without a photo.</string>
    <string name="tf_deleteDialogTitle">Confirm deletion</string>
    <string name="tf_deleteDialogText">Are you sure you want to delete this photo?</string>
    <string name="to_forbiddenEdit">Task status must be open to fill an edit form.</string>
    <string name="to_failedToOpenStatus">Failed to set the status to open on the server.\n\n%1$s</string>
    <string name="to_filter">Filter</string>
    <string name="to_showCount">Showing %1$d of %2$d</string>
    <string name="to_contains">Name:</string>
    <string name="to_containsHint">Name contains</string>
    <string name="to_status">Status:</string>
    <string name="to_sort">Sort:</string>
    <string name="to_showAll">All</string>
    <string name="to_showNew">New</string>
    <string name="to_showOpen">Open</string>
    <string name="to_showSent">Sent</string>
    <string name="to_showProvided">Provided</string>
    <string name="to_showAccepted">Accepted</string>
    <string name="to_showDeclined">Declined</string>
    <string name="to_showReturned">Returned</string>
    <string name="to_sortPassedAtEnd">Passed at the End</string>
    <string name="to_sortByStatus">By Status</string>
    <string name="to_sortByDueDate">By Due Date</string>
    <string name="to_sortByName">By Name</string>
    <string name="to_sortAsc">Ascend</string>
    <string name="to_sortDesc">Descend</string>
    <string name="to_photoCount_1">%1$d photo</string>
    <string name="to_photoCount_2">%1$d photos</string>
    <string name="to_photoCount_3">%1$d photos</string>
    <string name="to_created">Created:</string>
    <string name="to_dueDate">Due Date:</string>
    <string name="tpg_taskId">Task Id</string>
    <string name="tpg_order">Order</string>
    <string name="tpg_latitude">Latitude</string>
    <string name="tpg_longitude">Longitude</string>
    <string name="tpg_created">Created</string>
    <string name="tpg_imageDrawError">An unexpected error occurred while rendering the image.\n\n%1$s</string>
    <string name="lg_promptLogin">Login</string>
    <string name="lg_promptPassword">Password</string>
    <string name="lg_actionSignIn">Sign in</string>
    <string name="lg_welcome">Welcome !</string>
    <string name="lg_singInTitle">SIGN IN</string>
    <string name="lg_loginFailed">Login failed:\n%1$s</string>
    <string name="lg_loginFailedNoServer">Unable to connect to the network.</string>
    <string name="lg_loginFailedWrongData">The username or password is incorrect.</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="map_photoInfo_taskId">Task Id:</string>
    <string name="map_photoInfo_lat">Latitude:</string>
    <string name="map_photoInfo_lng">Longitude:</string>
    <string name="map_photoInfo_alt">Altitude[m]:</string>
    <string name="map_photoInfo_created">Created:</string>
    <string name="map_photoInfo_toDetailLabel">Click to go to the task detail.</string>
    <string name="map_photoInfo_toggleLabel">Click the photo to see photos behind it.</string>
    <string name="map_drawingError">Drawing error.</string>
    <string name="map_failedDrawIconPhotoText">Failed to draw a photo icon.\n\n%1$s</string>
    <string name="map_unownedTask">Unassigned</string>
    <string name="map_nd">n/d</string>
    <string name="map_unexpectedExceptionGG">Unexpected error</string>
    <string name="map_exceptionDuringDownloadGG">An unexpected error occurred during downloading of LPIS.</string>
    <string name="map_exceptionAfterDownloadGG">Shapefiles were not downloaded successfully.</string>
    <string name="map_exceptionDuringParsingGG">Downloaded shapefiles are not valid.</string>
    <string name="map_failedCurrentLocationTitle">No Current Location</string>
    <string name="map_failedCurrentLocationText">Unable to display current location and location information due to insufficient location tracking application permissions.</string>
    <string name="map_blueMarkerLabel">Blue marker:</string>
    <string name="map_blueMarkerValue">Chipset location</string>
    <string name="map_latChipSet">Latitude:</string>
    <string name="map_lngChipSet">Longitude:</string>
    <string name="map_redMarkerLabel">Red marker:</string>
    <string name="map_redMarkerValue">Centroid location</string>
    <string name="map_latCentroid">Latitude:</string>
    <string name="map_lngCentroid">Longitude:</string>
    <string name="map_sampleCountLabel">Samples:</string>
    <string name="map_sampleCountValue">%1$s/%2$s</string>
    <string name="map_accuracy">Accuracy:</string>
    <string name="map_basicInfoUnavailable">unavailable</string>
    <string name="map_accuracyUnit">m</string>
    <string name="map_buttonToggleSatellite">Sat</string>
    <string name="map_buttonToggleMap">Map</string>
    <string name="map_infoCurPSTitle">Shown Photos</string>
    <string name="map_infoCurPSSubtitleUnowned">Unassigned</string>
    <string name="map_infoCurPSSubtitleAll">All</string>
    <string name="map_infoCurPSSubtitleTask">By Task</string>
    <string name="map_infoCurPSTaskId">Task Id:</string>
    <string name="pt_infoCurPathTitleRecording">Recording Path</string>
    <string name="pt_infoCurPathCentroidsNote">By Centroids</string>
    <string name="pt_infoCurPathId">Id:</string>
    <string name="pt_infoCurPathName">Name:</string>
</resources>