<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/to_constraintLayout_filter"
    style="@style/panel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_panel_bottom"
    tools:context=".TaskOverviewActivity"
    android:padding="16dp"
    tools:layout_editor_absoluteY="8dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView5"
                style="@style/panelTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_filter"
                android:textFontWeight="900"
                android:textSize="32sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/to_textView_filterCount"
                style="@style/textBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.6"
                android:text="@string/to_showCount"
                android:textAlignment="center"
                android:textColor="@color/mainPrimary"
                android:textFontWeight="700"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView5" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/to_editText_name"
            style="@style/editText"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/to_containsHint"
            android:inputType="text"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView28"
                style="@style/filterLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_status" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <CheckBox
                        android:id="@+id/to_checkBox_new"
                        style="@style/checkBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:onClick="filterChanged"
                        android:text="@string/to_showNew" />

                    <CheckBox
                        android:id="@+id/to_checkBox_open"
                        style="@style/checkBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:onClick="filterChanged"
                        android:text="@string/to_showOpen" />

                    <CheckBox
                        android:id="@+id/to_checkBox_provided"
                        style="@style/checkBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:onClick="filterChanged"
                        android:text="@string/to_showProvided" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <CheckBox
                        android:id="@+id/to_checkBox_returned"
                        style="@style/checkBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:onClick="filterChanged"
                        android:text="@string/to_showReturned" />

                    <CheckBox
                        android:id="@+id/to_checkBox_accepted"
                        style="@style/checkBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:onClick="filterChanged"
                        android:text="@string/to_showAccepted" />

                    <CheckBox
                        android:id="@+id/to_checkBox_declined"
                        style="@style/checkBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:onClick="filterChanged"
                        android:text="@string/to_showDeclined" />
                </TableRow>

            </TableLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView30"
                style="@style/filterLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_sort" />

            <CheckBox
                android:id="@+id/to_checkBox_passedAtEnd"
                style="@style/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:checked="true"
                android:onClick="filterChanged"
                android:text="@string/to_sortPassedAtEnd" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/to_radioGroup_sortType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <RadioButton
                        android:id="@+id/to_radioButton_sortByStatus"
                        style="@style/radioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:onClick="filterChanged"
                        android:text="@string/to_sortByStatus" />

                    <RadioButton
                        android:id="@+id/to_radioButton_sortByDueDate"
                        style="@style/radioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="filterChanged"
                        android:text="@string/to_sortByDueDate" />

                    <RadioButton
                        android:id="@+id/to_radioButton_sortByName"
                        style="@style/radioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="filterChanged"
                        android:text="@string/to_sortByName" />
                </RadioGroup>

                <RadioGroup
                    android:id="@+id/to_radioGroup_sortOrder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/to_radioButton_sortDesc"
                        style="@style/radioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="filterChanged"
                        android:text="@string/to_sortDesc" />

                    <RadioButton
                        android:id="@+id/to_radioButton_sortAsc"
                        style="@style/radioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:onClick="filterChanged"
                        android:text="@string/to_sortAsc" />

                </RadioGroup>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Created for the GSA in 2020-2021. Project management: SpaceTec Partners, software development: www.foxcom.eu -->